--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ python-docx
 PyPDF2
 gunicorn==21.2.0  # Required for deployment (optional for local development)
 requests==2.31.0  # If your app makes HTTP requests
+flask-cors
